compose.scss: Fix alignment of "markdown preview" icons.
Removed the preview tag from the css rule, reduced the undo preview tag
to a font-size of 15px.

The preview tag being attached to the rule proved unnecessary. The icon
for reverting back to an editing state also dipped below the horizontal
level of the icon row.

--- a/static/styles/compose.scss
+++ b/static/styles/compose.scss
@@ -470,12 +470,17 @@ a.message-control-button:hover {
     min-height: 42px;
 }
 
-a#markdown_preview,
+a#markdown_preview {
+    margin-left: 2px;
+    color: hsl(0, 0%, 47%);
+}
+
 a#undo_markdown_preview {
     text-decoration: none;
     position: relative;
-    font-size: 16px;
+    font-size: 15px;
     color: hsl(0, 0%, 47%);
+    margin-left: 2px;
 }
 
 #markdown_preview_spinner {
